--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -11,3 +11,10 @@ updates:
       prefix:"bump
     schedule:
       interval: "daily"
+      
+   - package-ecosystem: "maven" # See documentation for possible values
+     directory: "/" # Location of package manifests
+     commit-message:
+      prefix:"bump
+    schedule:
+      interval: "daily"
