switch to express and pusher set up

--- a/.gitignore
+++ b/.gitignore
@@ -8,12 +8,16 @@
 /bazel-out
 
 # dependencies
-/node_modules
+node_modules/
 
 # profiling files
 chrome-profiler-events*.json
 
 #Environment varibales
+.env
+
+#spring boot api
+books/
 
 # IDEs and editors
 /.idea
