--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -8,13 +8,17 @@ updates:
   - package-ecosystem: "npm" # See documentation for possible values
     directory: "/" # Location of package manifests
     commit-message:
-      prefix: "bump"
     schedule:
       interval: "daily"
-      
-  - package-ecosystem: "maven" # See documentation for possible values
-    directory: "/books" # Location of package manifests
+
+  # - package-ecosystem: "maven" # See documentation for possible values
+  #   directory: "/books" # Location of package manifests
+  #   commit-message:
+  #   schedule:
+  #     interval: "daily"
+
+  - package-ecosystem: "npm" # See documentation for possible values
+    directory: "/Server" # Location of package manifests
     commit-message:
-      prefix: "bump"
     schedule:
       interval: "daily"
