--- a/Server/package.json
+++ b/Server/package.json
@@ -15,7 +15,7 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "nodemon": "^2.0.7",
-    "pg": "^8.6.0",
-    "pusher": "^5.0.0"
+    "pusher": "^5.0.0",
+    "shortid": "^2.2.16"
   }
 }
